--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -63,7 +63,7 @@ resizable="false" draggable="false" closeOnEscape="true">
  <h:form> 
  <h:inputHidden value="#{bookBean.book.id}" /> 
  <p:panelGrid columns="2"> 
- <h:outputLabel for="bookId" value="Book ID: *" /> 
+ <h:outputLabel for="bookId" value="Book IDDD: *" /> 
  <p:inputText id="bookId" 
 value="#{bookBean.book.bookId}" label="Book Id" placeholder="Book 
 Id" /> 
