--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,12 +1,91 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:p="http://primefaces.org/ui">
-
-    <h:head>
-    </h:head>
-
-    <h:body>
-        <p:spinner disabled="true"/>
-    </h:body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
+  <h:head>
+    <title>Books Data</title>
+  </h:head>
+  <h:body>
+    <p:dialog id="bookDetail1" widgetVar="$bookDetail1" header="Add 
+Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
+      <h:form>
+        <p:panelGrid columns="2">
+          <h:outputLabel for="title" value="Book Title: *" />
+          <p:inputText id="title" value="#{bookBean.newbook.title}" label="Book Title" placeholder="Book Title" />
+          <h:outputLabel for="category" value="Book Category" />
+          <p:inputText id="category" label="Book Category" value="#{bookBean.newbook.categoryId}" placeholder="Book Category" />
+          <h:outputLabel for="author" value="Book Author" />
+          <p:inputText id="author" label="Book author" value="#{bookBean.newbook.author}" placeholder="Book Author" />
+          <p:outputLabel for="datePub" value="Published Date" />
+          <p:calendar id="datePub" value="#{bookBean.newbook.published}" label="DatePosted:" required="true" pattern="dd/MM/yyyy" effect="slideDown" requiredMessage="Please Enter Published Date!" navigator="true" showButtonPanel="true" yearRange="c-60:c+60" placeholder="Published Date" />
+          <p:outputLabel for="price" value="Price" />
+          <p:inputText id="price" label="Price" value="#{bookBean.newbook.price}" placeholder="price" />
+          <p:commandButton value="Add" process="@form" id="AddButtonId" ajax="true" icon="ui-icon-plus" update=":form1:userTable" actionListener="#{bookBean.addBook()}" oncomplete="PF('$bookDetail1').hide()" />
+          <p:commandButton id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" />
+        </p:panelGrid>
+      </h:form>
+    </p:dialog>
+    <h:outputScript></h:outputScript>
+    <p:dialog id="bookDetail2" widgetVar="$bookDetail2" header="Update Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
+      <h:form>
+        <h:inputHidden value="#{bookBean.book.id}" />
+        <p:panelGrid columns="2">
+          <h:outputLabel for="bookId" value="Book ID: *" />
+          <p:inputText id="bookId" value="#{bookBean.book.bookId}" label="Book Id" placeholder="Book 
+Id" />
+          <h:outputLabel for="title" value="Book Title: *" />
+          <p:inputText id="title" value="#{bookBean.book.title}" label="Book Title" placeholder="Book 
+Title" />
+          <h:outputLabel for="category" value="Book 
+Category" />
+          <p:inputText id="category" label="Book Category" value="#{bookBean.newbook.categoryId}" placeholder="Book Category" />
+          <h:outputLabel for="author" value="Author" />
+          <p:inputText id="author" label="Book Author" value="#{bookBean.book.author}" placeholder="Author" />
+          <p:outputLabel for="datePub" value="Published Date" />
+          <p:calendar id="datePub" value="#{bookBean.book.published}" label="DatePosted:" required="true" pattern="dd/MM/yyyy" effect="slideDown" requiredMessage="Please Enter Published Date!" navigator="true" showButtonPanel="true" yearRange="c-60:c+60" placeholder="Published 
+Date" />
+          <p:outputLabel for="price" value="Price" />
+          <p:inputText id="price" label="Price" value="#{bookBean.book.price}" placeholder="Price" />
+          <p:commandButton value="Update" ajax="true" icon="ui-icon-disk" update=":form1:userTable" actionListener="#{bookBean.UpdateBook(bookBean.book)}" oncomplete="handleComplete(xhr, status, args)" />
+          <p:commandButton value="Cancel" id="cancelButtonId" onclick="handleComplete(xhr, status, args)" />
+        </p:panelGrid>
+      </h:form>
+    </p:dialog>
+    <h:outputScript id="handleCompleteScript" target="body"></h:outputScript>
+    <h:form id="form1">
+      <p:commandButton icon="ui-icon-plusthick" id="addUserBtn" value="Add Book" update=":bookDetail1" ajax="true" oncomplete="PF('$bookDetail1').show()" />
+      <p:dataTable value="#{bookBean.books}" var="book" paginator="true" rows="5" id="userTable">
+        <p:column headerText="id buku" style="text-align: 
+left;">
+          <h:outputText value="#{book.bookId}" />
+        </p:column>
+        <p:column headerText="Judul Buku"> #{book.title} </p:column>
+        <p:column headerText="Penerbit">
+          <h:outputText value="#{book.author}" />
+        </p:column>
+        <p:column headerText="Pengarang">
+          <h:outputText value="#{book.categoryId}" />
+        </p:column>
+        <p:column headerText="Tahun Penerbit">
+          <h:outputText value="#{book.published}">
+            <f:convertDateTime type="date" pattern="dd-MMM-yyyy" />
+          </h:outputText>
+        </p:column>
+        <p:column headerText="Kategori">
+          <h:outputText value="#{book.price}" />
+        </p:column>
+        <p:column headerText="Stock">
+          <h:outputText value="#{book.price}" />
+        </p:column>
+        <p:column headerText="Edit" style="text-align: center">
+          <p:commandButton icon="ui-icon-pencil" id="editUserBtn" value="Edit" ajax="true" actionListener="#{bookBean.changeBook(book)}" update=":bookDetail2" oncomplete="PF('$bookDetail2').show()" />
+        </p:column>
+        <p:column headerText="Delete" style="text-align: center">
+          <p:commandButton value="Delete" icon="ui-icon-trash" type="button" onclick="PF('confirmDialog').show()" />
+          <p:confirmDialog message="Are you sure you want to 
+delete this record?Record once deleted can not be retrieved." header="Deleting" severity="alert" widgetVar="confirmDialog">
+            <p:commandButton value="Yes Sure" update=":form1:userTable" action="#{bookBean.deleteBook(book)}" oncomplete="PF('confirmDialog').hide()" />
+            <p:commandButton value="Not Yet" onclick="PF('confirmDialog').hide();" type="button" />
+          </p:confirmDialog>
+        </p:column>
+      </p:dataTable>
+    </h:form>
+  </h:body>
 </html>
