--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -12,8 +12,11 @@
     }
 </style>
  
- 
- <h:form id="form">
+     <div class="card">
+        <h5 class="mt-0">Default</h5>
+        <p:tabView>
+            <p:tab title="Header I">
+<h:form id="form">
     <p:growl id="msgs" showDetail="true"/>
  
     <p:dataTable var="book" value="#{bookBean.books}">
@@ -45,5 +48,21 @@
  
      
  </h:form>
+            </p:tab>
+            <p:tab title="Header II">
+                <p class="m-0">
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
+                    illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                    odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
+                </p>
+            </p:tab>
+            <p:tab title="Header III">
+                <p class="m-0">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
+                    et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                    Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
+                </p>
+            </p:tab>
+        </p:tabView>
+    </div>
   </h:body>
 </html>
