--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -11,15 +11,24 @@
         margin-left:8px;
     }
 </style>
- 
+    <p:dialog id="bookDetail1" widgetVar="$bookDetail1" header="Add 
+Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
+      <h:form>
+        <p:panelGrid columns="2">
+          <p:commandButton value="Add" process="@form" id="AddButtonId" ajax="true" icon="ui-icon-plus"  actionListener="#{bookBean.addBook()}" oncomplete="PF('$bookDetail1').hide()" />
+          <p:commandButton id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" />
+        </p:panelGrid>
+      </h:form>
+    </p:dialog>
      <div class="card">
         <h5 class="mt-0">Default</h5>
         <p:tabView>
             <p:tab title="Header I">
-<h:form id="form">
+<h:form id="form1">
+     <p:commandButton icon="ui-icon-plusthick" id="addUserBtn" value="Add Book" update=":bookDetail1" ajax="true" oncomplete="PF('$bookDetail1').show()" /> 
     <p:growl id="msgs" showDetail="true"/>
  
-    <p:dataTable var="book" value="#{bookBean.books}">
+    <p:dataTable var="book" value="#{bookBean.books}" id="bookTable">
     <p:column headerText="Id">
         <h:outputText value="#{book.idBuku}" />
     </p:column>
@@ -44,7 +53,17 @@
     <p:column headerText="Stock">
         <h:outputText value="#{book.stok}" />
     </p:column>
-</p:dataTable>
+
+        <p:column headerText="Delete" style="text-align: 
+center">
+          <p:commandButton value="Delete" icon="ui-icon-trash" type="button" onclick="PF('confirmDialog').show()" />
+          <p:confirmDialog message="Are you sure you want to 
+delete this record?Record once deleted can not be retrieved." header="Deleting" severity="alert" widgetVar="confirmDialog">
+            <p:commandButton value="Yes Sure" update="bookTable" action="#{bookBean.deleteBook(book)}" oncomplete="PF('confirmDialog').hide()" />
+            <p:commandButton value="Not Yet" onclick="PF('confirmDialog').hide();" type="button" />
+          </p:confirmDialog>
+        </p:column>
+ </p:dataTable> 
  
      
  </h:form>
