--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -11,6 +11,7 @@
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script  type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+       
         <h:body styleClass="cyan lighten-5">
             <div class="valign-wrapper" id="login-page">
                 <div class="container">
@@ -24,19 +25,19 @@
                                                 <p:growl autoUpdate="true"/>
                                                 <div class="row">
                                                     <div class=" col s12 input-field">
-                                                        <h:inputText id="username" required="true" requiredMessage="Id need You "/>
+                                                        <h:inputText id="username" required="true" requiredMessage="Id need You " value="#{login_bean.username}"/>
                                                         <h:outputLabel for="username" value="Username"/>
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class=" col s12 input-field">
-                                                        <h:inputText id="password" required="true" requiredMessage="Password need You "/>
+                                                        <h:inputSecret id="password" value="#{login_bean.password}" required="true" requiredMessage="Password need You "/>
                                                         <h:outputLabel for="password" value="Password"/>
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class=" col s12 input-field center-align">
-                                                        <h:commandLink value="login" styleClass="btn btn-large"/>
+                                                        <h:commandLink value="Masuk!" styleClass="btn btn-large" action="#{login_bean.checkuser()}"/>
                                                     </div>
                                                 </div>
                                             </h:form>
@@ -48,9 +49,9 @@
                 </div>
             </div>      
             <script>
-                $(document).on("ready", function()){
+                $(document).on("ready",function(){
                 $('#login-page').css({'height': window.innerHeight + 'px'});
-                }};
+            });
             </script>   
         </h:body>
 </html>
