--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -12,14 +12,14 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script  type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
        
-        <h:body styleClass="cyan lighten-5">
+        <h:body style="background-image: url(images/background.jpg);background-size: cover">
             <div class="valign-wrapper" id="login-page">
                 <div class="container">
-                    <div class="center-align mt-5" style="margin-top: 100px">
+                    <div class="center-align mt-5" style="margin-top: 50px">
                         <div class="col s6 offset-s3">
                             <div class="card">
                                 <div class="card-content">
-                                    <img class="resposive-img" style="max-width: 180;" src="images/logo.png"/>
+                                    <img class="resposive-img" style="max-width: 250px;" src="images/logo.png"/>
                                         <div class="left-align">
                                             <h:form id="login-form">
                                                 <p:growl autoUpdate="true"/>
@@ -37,7 +37,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class=" col s12 input-field center-align">
-                                                        <h:commandLink value="Masuk!" styleClass="btn btn-large" action="#{login_bean.checkuser()}"/>
+                                                        <h:commandLink value="Masuk!" styleClass="ui-button-success btn-large" style="background-color: green" action="#{login_bean.checkuser()}"/>
                                                     </div>
                                                 </div>
                                             </h:form>
