--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -10,55 +10,41 @@
     </style>
     <p:dialog id="bookDetail2" widgetVar="$bookDetail2" header="Add Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
       <h:form>
-        <p:panelGrid columns="2">
-          <h:outputLabel for="judul" value="Judul Buku: *" />
+        <b:panelGrid columns="2">
           <b:inputText id="judul" value="#{bookBean.book.judulBuku}" label="Book Title" placeholder="Book Title" />
-          <h:outputLabel for="penerbit" value="Penerbit" />
           <b:inputText id="penerbit" label="Penerbit" value="#{bookBean.book.penerbit}" placeholder="Penerbit" />
-          <h:outputLabel for="pengarang" value="Pengarang" />
           <b:inputText id="pengarang" label="Pengarang" value="#{bookBean.book.pengarang}" placeholder="Pengarang" />
-          <p:outputLabel for="tahun" value="Tahun Penerbit" />
           <b:inputText id="tahun" value="#{bookBean.book.tahunPenerbit}" label="Tahun Penerbit:" required="true" requiredMessage="Please Enter Published Date!" placeholder="Published Date">
             <f:convertNumber integerOnly="true" type="number" />
           </b:inputText>
-          <p:outputLabel for="kategori" value="Kategori" />
           <b:inputText id="kategori" label="Price" value="#{bookBean.book.kategori}" placeholder="price" />
-          <p:outputLabel for="stock" value="Stock" />
           <b:inputText id="stock" label="Price" value="#{bookBean.book.stok}" placeholder="price" />
-          <p:commandButton value="Update" ajax="true" icon="ui-icon-disk" actionListener="#{bookBean.UpdateBook(bookBean.book)}" oncomplete="PF('$bookDetail2').hide()" update="@(.bookEditable)" />
+          <b:commandButton value="Update" ajax="true" icon="ui-icon-disk" actionListener="#{bookBean.UpdateBook(bookBean.book)}" oncomplete="PF('$bookDetail2').hide()" update="@(.bookEditable)" />
           <b:commandButton id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" />
-        </p:panelGrid>
+        </b:panelGrid>
       </h:form>
     </p:dialog>
     <p:dialog id="bookDetail1" widgetVar="$bookDetail1" header="Add 
 Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
       <h:form>
-        <p:panelGrid columns="2" class="editClass">
-          <h:outputLabel for="judul" value="Judul Buku: *" />
+        <b:panelGrid columns="2" class="editClass">
           <b:inputText id="judul" value="#{bookBean.newbook.judulBuku}" label="Book Title" placeholder="Book Title" />
-          <h:outputLabel for="penerbit" value="Penerbit" />
           <b:inputText id="penerbit" label="Penerbit" value="#{bookBean.newbook.penerbit}" placeholder="Penerbit" />
-          <h:outputLabel for="pengarang" value="Pengarang" />
           <b:inputText id="pengarang" label="Pengarang" value="#{bookBean.newbook.pengarang}" placeholder="Pengarang" />
-          <p:outputLabel for="tahun" value="Tahun Penerbit" />
           <b:inputText id="tahun" value="#{bookBean.newbook.tahunPenerbit}" label="Tahun Penerbit:" required="true" requiredMessage="Please Enter Published Date!" placeholder="Published Date">
             <f:convertNumber integerOnly="true" type="number" />
           </b:inputText>
-          <p:outputLabel for="kategori" value="Kategori" />
           <b:inputText id="kategori" label="Price" value="#{bookBean.newbook.kategori}" placeholder="price" />
-          <p:outputLabel for="stock" value="Stock" />
           <b:inputText id="stock" label="Price" value="#{bookBean.newbook.stok}" placeholder="price" />
           <b:commandButton value="Add" process="@form" id="AddButtonId" ajax="true" icon="ui-icon-plus" actionListener="#{bookBean.addBook()}" oncomplete="PF('$bookDetail1').hide()" update="@(.bookEditable)" />
           <b:commandButton process="@form" ajax="true" id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" update="@(.bookEditable)" />
-        </p:panelGrid>
+        </b:panelGrid>
       </h:form>
     </p:dialog>
     <div class="card">
-      <p:tabView>
-        <p:tab title="Header I">
           <h:form>
             <b:commandButton value="Add" icon="edit" ajax="true" oncomplete="PF('$bookDetail1').show()" id="addUserBtn" style="margin-bottom: 10px;" />
-            <b:dataTable value="#{bookBean.books}" var="book" caption="This is a BootsFaces example table. It shows a list of cars, but that's not what it's about. The cars are just a placeholder for your content." class="bookEditable">
+            <b:dataTable value="#{bookBean.books}" var="book"  class="bookEditable">
               <b:dataTableColumn value="#{book.idBuku}" />
               <b:dataTableColumn value="#{book.judulBuku}" />
               <b:dataTableColumn value="#{book.penerbit}" />
@@ -76,33 +62,6 @@ Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false
               </b:dataTableColumn>
             </b:dataTable>
           </h:form>
-        </p:tab>
-        <p:tab title="Header II">
-          <h:form>
-            <b:commandButton value="Add" icon="edit" ajax="true" oncomplete="PF('$bookDetail1').show()" id="addUserBtn" style="margin-bottom: 10px;" />
-            <b:dataTable value="#{anggotaBean.anggotas}" var="anggota" caption="This is a BootsFaces example table. It shows a list of cars, but that's not what it's about. The cars are just a placeholder for your content." class="bookEditable">
-              <b:dataTableColumn value="#{anggota.idAnggota}" />
-              <b:dataTableColumn value="#{anggota.nim}" />
-              <b:dataTableColumn value="#{anggota.namaAnggota}" />
-              <b:dataTableColumn value="#{anggota.namaAnggota}" />
-              <b:dataTableColumn value="#{anggota.kelas}" />
-              <b:dataTableColumn value="#{anggota.tempatLahir}" />
-              <b:dataTableColumn value="#{anggota.tanggalLahir}" />
-              <b:dataTableColumn value="">
-                <p:commandButton value="Delete" icon="pi-trash" action="#{bookBean.deleteBook(book)}">
-                  <f:ajax execute="@this" render="@form" />
-                </p:commandButton>
-                <p:commandButton styleClass="ui-button-raised ui-button-info ui-button-flat" icon="ui-icon-pencil" id="editUserBtn" value="Edit  ..." ajax="true" actionListener="#{bookBean.changeBook(book)}" update=":bookDetail2" oncomplete="PF('$bookDetail2').show()" />
-                <!--        <b:commandButton value="edit" icon="edit" ajax="true" update="@(.bookEditable)"
-                       onclick="ajax:book.edit(); javascript:return false;" ></b:commandButton>-->
-              </b:dataTableColumn>
-            </b:dataTable>
-          </h:form>
-        </p:tab>
-        <p:tab title="Header III">
-          <p class="m-0">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus. </p>
-        </p:tab>
-      </p:tabView>
     </div>
   </h:body>
 </html>
