--- a/web/kembalibuku.xhtml
+++ b/web/kembalibuku.xhtml
@@ -8,35 +8,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
     
     <h:head>
-        <title>Facelet Title</title>
+        <title>Library School| Pengembalian Buku</title>
         <link type="text/css" rel="stylesheet" 
 		  href="css/navbar.css" />
         <link href="https://fonts.gstatic.com" rel="preconnect"></link>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,600&amp;display=swap" rel="stylesheet"></link>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
     </h:head>
     <h:body>
 
         <!-- Awal NavBar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="kembalibuku.xhtml" id="logo">
-                   Library School
+                <a class="navbar-brand" href="kembalibuku.xhtml" style="padding-right: 300px">
+                    <img src="images/logo2.png" alt="" width="150" height="40" class="d-inline-block"/>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
 
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="pinjambuku.xhtml">Pinjam Buku</a>
+                    <ul class="navbar-nav ms-auto" style="font-size: 15px">
+                        <li class="nav-item " >
+                            <a class="nav-link pe-5" aria-current="page" href="pinjambuku.xhtml" >Peminjaman Buku</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active " href="kembalibuku.xhtml">Kembalikan Buku</a>
+                            <a class="nav-link active pe-auto" href="kembalibuku.xhtml">Pengembalian Buku</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="login.xhtml">Log Out</a>
-                        </li>
+                      
+                        <li class="nav-item ms-5" style="padding-left: 380px">
+                                <a class="nav-link" href="login.xhtml">Log Out</a>
+                            </li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +50,7 @@
 
 
         <!--TABLE BUKU PINJAM PEMBUKA-->
-        <h:form >
+        <h:form style="font-size: 15px" >
             <b:dataTable value="#{bookBean.books}"
                          var="Book">
                 <b:dataTableColumn  value="#{Book.idBuku}" label="Nomor Buku" />
@@ -58,7 +61,7 @@
                 <b:dataTableColumn value="#{Book.kategori}" label="Kategori" />
                 <b:dataTableColumn value="#{Book.stok}" label="Stock" />
                 <b:dataTableColumn label="Click">
-                    <b:commandButton class="btn-danger" value="Kembalikan" icon="check" ajax="true" update="@(.editableCarTable) "
+                    <b:commandButton  style="font-size: 15px" class="btn-danger" value="Kembalikan" icon="check" ajax="true" update="@(.editableCarTable) "
                                      onclick="ajax:car.edit();
                                              javascript:return false;" >
                     </b:commandButton>
