pengembalian and peminjaman update

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -24,8 +24,7 @@
         </b:panelGrid>
       </h:form>
     </p:dialog>
-    <p:dialog id="bookDetail1" widgetVar="$bookDetail1" header="Add 
-Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
+    <p:dialog id="bookDetail1" widgetVar="$bookDetail1" header="Add Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
       <h:form>
         <b:panelGrid columns="2" class="editClass">
           <b:inputText id="judul" value="#{bookBean.newbook.judulBuku}" label="Book Title" placeholder="Book Title" />
