--- a/web/kembalibuku.xhtml
+++ b/web/kembalibuku.xhtml
@@ -34,7 +34,7 @@
                             <a class="nav-link pe-5" aria-current="page" href="pinjambuku.xhtml" >Peminjaman Buku</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active pe-auto" href="kembalibuku.xhtml">#{login_bean.username}</a>
+                            <a class="nav-link active pe-auto" href="kembalibuku.xhtml">Pengembalian Buku</a>
                         </li>
                       
                         <li class="nav-item ms-5" style="padding-left: 380px">
