--- a/web/pinjambuku.xhtml
+++ b/web/pinjambuku.xhtml
@@ -11,6 +11,10 @@
         <title>Library School| Pinjam Buku</title>
         <link type="text/css" rel="stylesheet" 
               href="css/navbar.css" />
+         <link type="text/css" rel="stylesheet" 
+              href="css/component.min.css" />
+         <link type="text/css" rel="stylesheet" 
+              href="css/component.min.css" />
         <link href="https://fonts.gstatic.com" rel="preconnect"></link>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,600&amp;display=swap" rel="stylesheet"></link>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
@@ -46,7 +50,9 @@
             </div>
         </nav>
         <!-- Akhir NavBar-->
-<!--Notif-->
+
+        
+        <!--Notif-->
     <p:dialog id="pinjam" widgetVar="$pinjam" header="Add Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
       <h:form>
         <b:panelGrid columns="2" class="editClass">
