update login table

--- a/web/catalogPinjam.xhtml
+++ b/web/catalogPinjam.xhtml
@@ -26,14 +26,12 @@
                 <div class="main-sidebar sidebar-style-2">
                     <aside id="sidebar-wrapper">
                         <div class="sidebar-brand">
-                            <a href="dashboard.xhtml">Library School</a>
+                            <a href="catalogBuku.xhtml">Library School</a>
                         </div>
-                        <div class="sidebar-brand sidebar-brand-sm">
-                            <a href="dashboard.xhtml">LS</a>
-                        </div>
+
                         <ul class="sidebar-menu">
                             <li>
-                                <a class="nav-link" href="login.xhtml">
+                                <a class="nav-link" href="catalogPinjam.xhtml">
                                     <i class="fas fa-cart-arrow-down"></i>
                                     <span>Hi,#{login_bean.username} </span>
                                 </a>
