--- a/web/peminjamTable.xhtml
+++ b/web/peminjamTable.xhtml
@@ -34,10 +34,13 @@
                             <a class="nav-link pe-auto" href="petugasTable.xhtml">Data Petugas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-auto active" href="peminjamTable.xhtml">Data Peminjam</a>
+                            <a class="nav-link pe-auto active " href="peminjamTable.xhtml">Data Peminjam</a>
+                        </li>
+                        <li class="nav-item" style="">
+                            <a class="nav-link pe-auto" href="anggotaTable.xhtml">Data Anggota</a>
                         </li>
                         <li class="nav-item" style="padding-right:200px">
-                            <a class="nav-link pe-auto" href="anggotaTable.xhtml">Data Anggota</a>
+                            <a class="nav-link pe-auto " href="loginTable.xhtml">Data Login</a>
                         </li>
                         <li class="nav-item text-left " style="margin-right: -100px">
                             <a class="nav-link" href="login.xhtml">Log Out</a>
