--- a/web/petugasTable.xhtml
+++ b/web/petugasTable.xhtml
@@ -34,8 +34,11 @@
                         <li class="nav-item">
                             <a class="nav-link " href="peminjamTable.xhtml">Data Peminjam</a>
                         </li>
-                        <li class="nav-item" style="padding-right:200px">
+                        <li class="nav-item" style="">
                             <a class="nav-link " href="anggotaTable.xhtml">Data Anggota</a>
+                        </li>
+                        <li class="nav-item" style="padding-right:200px">
+                            <a class="nav-link pe-auto " href="loginTable.xhtml">Data Login</a>
                         </li>
                         <li class="nav-item text-left " style="margin-right: -100px">
                             <a class="nav-link" href="login.xhtml">Log Out</a>
