--- a/web/anggotaTable.xhtml
+++ b/web/anggotaTable.xhtml
@@ -33,8 +33,11 @@
                         <li class="nav-item">
                             <a class="nav-link pe-auto " href="peminjamTable.xhtml">Data Peminjam</a>
                         </li>
-                        <li class="nav-item " style="padding-right:200px">
+                       <li class="nav-item" style="">
                             <a class="nav-link pe-auto active" href="anggotaTable.xhtml">Data Anggota</a>
+                        </li>
+                        <li class="nav-item" style="padding-right:200px">
+                            <a class="nav-link pe-auto " href="loginTable.xhtml">Data Login</a>
                         </li>
                         <li class="nav-item text-left " style="margin-right: -100px">
                             <a class="nav-link" href="login.xhtml">Log Out</a>
@@ -83,8 +86,8 @@
               <b:dataTableColumn value="#{anggota.kelas}" />    
               <b:dataTableColumn value="#{anggota.tempatLahir}" />
               <b:dataTableColumn value="#{anggota.tanggalLahir}" />
-              <b:dataTableColumn value="">
-                  <p:commandButton styleClass="btn-danger text-dark" value="Delete" icon="pi-trash" action="#{anggotaBean.deleteAnggota(anggota)}">
+              <b:dataTableColumn value="" label="action">
+                  <p:commandButton styleClass="btn-danger justify-content-center text-dark" value="Delete" icon="pi-trash" action="#{anggotaBean.deleteAnggota(anggota)}">
                   <f:ajax execute="@this" render="@form" />
                 </p:commandButton>
                 <p:commandButton styleClass="ui-button-raised text-dark btn-warning ui-button-info ui-button-flat" icon="ui-icon-pencil" id="editUserBtn" value="Edit" ajax="true" actionListener="#{anggotaBean.changeAnggota(anggota)}" update=":anggotaDetail2" oncomplete="PF('$anggotaDetail2').show()" />
