--- a/web/catalogBuku.xhtml
+++ b/web/catalogBuku.xhtml
@@ -33,7 +33,7 @@
                         </div>
                         <ul class="sidebar-menu">
                             <li>
-                                <a class="nav-link" href="login.xhtml">
+                                <a class="nav-link" href="catalogBuku.xhtml">
                                     <i class="fas fa-cart-arrow-down"></i>
                                     <span>Hi,#{login_bean.username} </span>
                                 </a>
