--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -33,8 +33,11 @@
                         <li class="nav-item">
                             <a class="nav-link pe-auto" href="peminjamTable.xhtml">Data Peminjam</a>
                         </li>
+                        <li class="nav-item" style="">
+                            <a class="nav-link " href="anggotaTable.xhtml">Data Anggota</a>
+                        </li>
                         <li class="nav-item" style="padding-right:200px">
-                            <a class="nav-link pe-auto" href="anggotaTable.xhtml">Data Anggota</a>
+                            <a class="nav-link pe-auto active" href="loginTable.xhtml">Data Login</a>
                         </li>
                         <li class="nav-item text-left " style="margin-right: -100px">
                             <a class="nav-link" href="login.xhtml">Log Out</a>
@@ -55,8 +58,8 @@
                     <b:inputText id="tahun" value="#{bookBean.book.tahunPenerbit}" label="Tahun Penerbit:" required="true" requiredMessage="Please Enter Published Date!" placeholder="Published Date">
                         <f:convertNumber integerOnly="true" type="number" />
                     </b:inputText>
-                    <b:inputText id="kategori" label="Price" value="#{bookBean.book.kategori}" placeholder="price" />
-                    <b:inputText id="stock" label="Price" value="#{bookBean.book.stok}" placeholder="price" />
+                    <b:inputText id="kategori" label="Kategori" value="#{bookBean.book.kategori}" placeholder="Kategori" />
+                    <b:inputText id="stock" label="Stok" value="#{bookBean.book.stok}" placeholder="Stok" />
                     <b:commandButton value="Update" ajax="true" icon="ui-icon-disk" actionListener="#{bookBean.UpdateBook(bookBean.book)}" oncomplete="PF('$bookDetail2').hide()" update="@(.bookEditable)" />
                     <b:commandButton id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" />
                 </b:panelGrid>
@@ -76,8 +79,8 @@
                     <b:inputText id="tahun" value="#{bookBean.newbook.tahunPenerbit}" label="Tahun Penerbit:" required="true" requiredMessage="Please Enter Published Date!" placeholder="Published Date">
                         <f:convertNumber integerOnly="true" type="number" />
                     </b:inputText>
-                    <b:inputText id="kategori" label="Price" value="#{bookBean.newbook.kategori}" placeholder="price" />
-                    <b:inputText id="stock" label="Price" value="#{bookBean.newbook.stok}" placeholder="price" />
+                    <b:inputText id="kategori" label="Kategori" value="#{bookBean.newbook.kategori}" placeholder="Kategori" />
+                    <b:inputText id="stock" label="Stock" value="#{bookBean.newbook.stok}" placeholder="Stock" />
                     <b:commandButton value="Add" process="@form" id="AddButtonId" ajax="true" icon="ui-icon-plus" actionListener="#{bookBean.addBook()}" oncomplete="PF('$bookDetail1').hide()" update="@(.bookEditable)" />
                     <b:commandButton process="@form" ajax="true" id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" update="@(.bookEditable)" />
                 </b:panelGrid>
