--- a/web/loginTable.xhtml
+++ b/web/loginTable.xhtml
@@ -1,50 +1,93 @@
-  <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
+    
     <h:head>
-      <title>Books Data</title>
+        <title>Books Data</title>
     </h:head>
     <h:body>
-      <style type="text/css">
-        .ui-row-editor .ui-row-editor-pencil {
-          margin-left: 8px;
-        }
-      </style>
-    <p:dialog id="loginDetail2" widgetVar="$loginDetail2" header="Add Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
-      <h:form>
-        <b:panelGrid columns="2">
-          <b:inputText id="password" value="#{loginBean.login.password}" label="Password" placeholder="Password" />
-          <b:inputText id="role" label="Roles" value="#{loginBean.login.loginType}" placeholder="Roles Roles" />
-          <b:commandButton value="Update" ajax="true" icon="ui-icon-disk" actionListener="#{loginBean.UpdateLogin(loginBean.login)}" oncomplete="PF('$loginDetail2').hide()" update="@(.loginEditable)" />
-          <b:commandButton id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" />
-        </b:panelGrid>
-      </h:form>
-    </p:dialog>
-    <p:dialog id="loginDetail1" widgetVar="$loginDetail1" header="Add Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
-      <h:form>
-        <b:panelGrid columns="2" class="editClass">
-          <b:inputText id="username" value="#{loginBean.newlogin.username}" label="Username" placeholder="Username" />
-          <b:inputText id="password" value="#{loginBean.newlogin.password}" label="Password" placeholder="Password" />
-          <b:inputText id="role" label="Roles" value="#{loginBean.newlogin.loginType}" placeholder="Roles Roles" />
-          <b:commandButton value="Add" process="@form" id="AddButtonId" ajax="true" icon="ui-icon-plus" actionListener="#{loginBean.addLogin()}" oncomplete="PF('$loginDetail1').hide()" update="@(.loginEditable)" />
-          <b:commandButton process="@form" ajax="true" id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" update="@(.loginEditable)" />
-        </b:panelGrid>
-      </h:form>
-    </p:dialog>
-      <div class="card">
+        <style type="text/css">
+            .ui-row-editor .ui-row-editor-pencil {
+                margin-left: 8px;
+            }
+        </style>
+        <link type="text/css" rel="stylesheet" 
+              href="css/navbar.css" />  
+        <!-- Awal NavBar-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-0" >
+            <div class="container">
+                <a class="navbar-brand" style="margin-left: -180px" href="peminjamTable.xhtml" >
+                    WELCOME TO ADMIN PAGE
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav" style="margin-left: 200px">
+
+                    <ul class="navbar-nav ms-auto" style="font-size: 15px">
+                        <li class="nav-item" style="padding-left: 50px" >
+                            <a class="nav-link " aria-current="page" href="index.xhtml" >Data Buku</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pe-auto" href="petugasTable.xhtml">Data Petugas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pe-auto " href="peminjamTable.xhtml">Data Peminjam</a>
+                        </li>
+                        <li class="nav-item" style="">
+                            <a class="nav-link pe-auto" href="anggotaTable.xhtml">Data Anggota</a>
+                        </li>
+                        <li class="nav-item" style="padding-right:200px">
+                            <a class="nav-link pe-auto active" href="loginTable.xhtml">Data Login</a>
+                        </li>
+                        <li class="nav-item text-left " style="margin-right: -100px">
+                            <a class="nav-link " href="login.xhtml">Log Out</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Akhir NavBar-->
+
+        <p:dialog id="loginDetail2" widgetVar="$loginDetail2" header="Add Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
             <h:form>
-              <b:commandButton value="Add" icon="edit" ajax="true" oncomplete="PF('$loginDetail1').show()" id="addUserBtn" style="margin-bottom: 10px;" />
-              <b:dataTable value="#{loginBean.logins}" var="login" class="loginEditable">
-                <b:dataTableColumn value="#{login.idLogin}" />
-                <b:dataTableColumn value="#{login.username}" />
-                <b:dataTableColumn value="#{login.password}" />
-                <b:dataTableColumn value="#{login.loginType}" />
-                <b:dataTableColumn value="">
-                  <p:commandButton value="Delete" icon="pi-trash" action="#{loginBean.deleteLogin(login)}">
-                    <f:ajax execute="@this" render="@form" />
-                  </p:commandButton>
-                  <p:commandButton styleClass="ui-button-raised ui-button-info ui-button-flat" icon="ui-icon-pencil" id="editUserBtn" value="Edit" ajax="true" actionListener="#{loginBean.changeLogin(login)}"  oncomplete="PF('$loginDetail2').show()" update=":loginDetail2"/>
-                </b:dataTableColumn>
-              </b:dataTable>
+                <b:panelGrid columns="2">
+                    <b:inputText id="password" value="#{loginBean.login.password}" label="Password" placeholder="Password" />
+                    <b:inputText id="role" label="Roles" value="#{loginBean.login.loginType}" placeholder="Roles Roles" />
+                    <b:commandButton value="Update" ajax="true" icon="ui-icon-disk" actionListener="#{loginBean.UpdateLogin(loginBean.login)}" oncomplete="PF('$loginDetail2').hide()" update="@(.loginEditable)" />
+                    <b:commandButton id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" />
+                </b:panelGrid>
             </h:form>
-      </div>
+        </p:dialog>
+        <p:dialog id="loginDetail1" widgetVar="$loginDetail1" header="Add Book" hideEffect="explode" appendTo="@(body)" resizable="false" draggable="false" closeOnEscape="true">
+            <h:form>
+                <b:panelGrid columns="2" class="editClass">
+                    <b:inputText id="username" value="#{loginBean.newlogin.username}" label="Username" placeholder="Username" />
+                    <b:inputText id="password" value="#{loginBean.newlogin.password}" label="Password" placeholder="Password" />
+                    <b:inputText id="role" label="Roles" value="#{loginBean.newlogin.loginType}" placeholder="Roles Roles" />
+                    <b:commandButton value="Add" process="@form" id="AddButtonId" ajax="true" icon="ui-icon-plus" actionListener="#{loginBean.addLogin()}" oncomplete="PF('$loginDetail1').hide()" update="@(.loginEditable)" />
+                    <b:commandButton process="@form" ajax="true" id="cancelAddButtonId" value="Cancel" onclick="handleComplete(xhr, status, args)" update="@(.loginEditable)" />
+                </b:panelGrid>
+            </h:form>
+        </p:dialog>
+        <div class="card">
+            <h:form>
+                <b:commandButton value="Add" icon="edit" ajax="true" oncomplete="PF('$loginDetail1').show()" id="addUserBtn" style="margin-bottom: 10px;" />
+                <b:dataTable value="#{loginBean.logins}" var="login" class="loginEditable">
+                    <b:dataTableColumn value="#{login.idLogin}" />
+                    <b:dataTableColumn value="#{login.username}" />
+                    <b:dataTableColumn value="#{login.password}" />
+                    <b:dataTableColumn value="#{login.loginType}" />
+                    <b:dataTableColumn value="" label="Action">
+                        <p:commandButton styleClass="btn-danger text-dark" value="Delete" icon="pi-trash" action="#{loginBean.deleteLogin(login)}">
+                            <f:ajax execute="@this" render="@form" />
+                        </p:commandButton>
+                        <p:commandButton styleClass="ui-button-raised ui-button-info ui-button-flat btn-warning text-dark" icon="ui-icon-pencil" id="editUserBtn" value="Edit" ajax="true" actionListener="#{loginBean.changeLogin(login)}"  oncomplete="PF('$loginDetail2').show()" update=":loginDetail2"/>
+                    </b:dataTableColumn>
+                </b:dataTable>
+            </h:form>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
     </h:body>
-  </html>
+</html>
