--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
+       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script  type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-    <h:body style="background-image: url(images/background.jpg);background-size: cover">
+    <h:body style="background-image: url(images/bgg.jpg); background-size: cover;">
         <div class="valign-wrapper" id="login-page">
             <div class="container">
                 <div class="center-align mt-5" style="margin-top: 50px">
